Add changeMap and map tweening

--- a/assets/default.project.json
+++ b/assets/default.project.json
@@ -2,6 +2,9 @@
 	"name": "assets",
 	"tree": {
 		"$className": "Folder",
+		"Prefabs": {
+			"$path": "Prefabs"
+		},
 		"Audio": {
 			"$className": "Folder",
 
