--- a/default.project.json
+++ b/default.project.json
@@ -3,6 +3,13 @@
     "tree": {
       "$className": "DataModel",
   
+      "Workspace": {
+        "$className": "Workspace",
+        "MapRoot": {
+          "$className": "Folder"
+        }
+      },
+
       "ReplicatedStorage": {
         "$className": "ReplicatedStorage",
         "Assets": {
