--- a/default.project.json
+++ b/default.project.json
@@ -10,6 +10,13 @@
         }
       },
 
+      "Players": {
+        "$className": "Players",
+        "$properties": {
+          "CharacterAutoLoads": false
+        }
+      },
+
       "ReplicatedStorage": {
         "$className": "ReplicatedStorage",
         "Assets": {
