Add savable BBL stats

--- a/server-packages.project.json
+++ b/server-packages.project.json
@@ -4,6 +4,9 @@
 		"**/*.spec.lua"
     ],
 	"tree": {
-		"$path": "ServerPackages"
+		"$path": "ServerPackages",
+		"MockDataStoreService": {
+			"$path": "modules/MockDataStoreService.rbxmx"
+		}
 	}
 }
