--- a/default.project.json
+++ b/default.project.json
@@ -86,6 +86,18 @@
           "$properties": {
             "Volume": 0.5
           }
+        },
+        "Gamemode": {
+          "$className": "SoundGroup",
+          "$properties": {
+            "Volume": 0.5
+          }
+        },
+        "Tools": {
+          "$className": "SoundGroup",
+          "$properties": {
+            "Volume": 0.5
+          }
         }
       },
 
