Don't require toolset by ID anymore

--- a/server-packages.project.json
+++ b/server-packages.project.json
@@ -7,6 +7,9 @@
 		"$path": "ServerPackages",
 		"MockDataStoreService": {
 			"$path": "modules/MockDataStoreService.rbxmx"
+		},
+		"Toolset": {
+			"$path": "modules/Toolset.rbxmx"
 		}
 	}
 }
