--- a/default.project.json
+++ b/default.project.json
@@ -34,6 +34,7 @@
         "Place": {
           "$className": "Folder",
           "WeaponThemes": {
+            "$ignoreUnknownInstances": true,
             "$className": "Folder"
           }
         },
