--- a/wally.toml
+++ b/wally.toml
@@ -14,6 +14,7 @@ Llama = "freddylist/llama@1.1.1"
 Roact = "roblox/roact@1.4.2"
 RoactRodux = "roblox/roact-rodux@0.3.0"
 RoactHooks = "kampfkarren/roact-hooks@0.3.0"
+RoactSpring = "chriscerie/roact-spring@^0.0"
 
 [server-dependencies]
 Cmdr = "evaera/cmdr@1.9.0"
