--- a/default.project.json
+++ b/default.project.json
@@ -67,6 +67,9 @@
       },
   
       "StarterPlayer": {
+        "$properties": {
+          "AutoJumpEnabled": false
+        },
         "StarterPlayerScripts": {
           "Client": {
             "$path": "src/client"
