--- a/default.project.json
+++ b/default.project.json
@@ -61,6 +61,9 @@
           "$ignoreUnknownInstances": true,
           "$className": "Folder"
         },
+        "StudioScripts": {
+          "$path": "studio"
+        },
         "Plugin_LightingSaves": {
           "$className": "Folder"
         }
