Custom character appearance, add anonymize command

--- a/default.project.json
+++ b/default.project.json
@@ -71,7 +71,8 @@
   
       "StarterPlayer": {
         "$properties": {
-          "AutoJumpEnabled": false
+          "AutoJumpEnabled": false,
+          "LoadCharacterAppearance": false
         },
         "StarterPlayerScripts": {
           "Client": {
