Update to RoactSpring 1.1.1, big GUI update
- Hopefully fixed updateHUD causing tools to disappear
- Added map thumbnails and updated map list GUI to display them
- Map list GUI has filter arrows and column names that don't scroll
- Added a global timer command and updated HUD to display it
- Buttons use Activated now (press and release), and have touch ripples

--- a/default.project.json
+++ b/default.project.json
@@ -20,7 +20,10 @@
       "ReplicatedStorage": {
         "$className": "ReplicatedStorage",
         "Assets": {
-          "$path": "assets.rbxmx"
+          "$path": "assets/assets.rbxmx",
+          "Images": {
+            "$path": "assets/Images.lua"
+          }
         },
         "Packages": {
           "$path": "shared-packages.project.json"
@@ -88,6 +91,14 @@
             "AutoAssignable": true,
             "TeamColor": { "BrickColor": 1001 }
           }
+        },
+        "Gladiators": {
+          "$className": "Team",
+          "$properties": {
+            "AutoAssignable": false,
+            "TeamColor": { "BrickColor": 21 },
+            "Tags": ["ToolsEnabled"]
+          }
         }
       },
 
@@ -129,9 +140,6 @@
       "TestService": {
         "$ignoreUnknownInstances": true,
   
-        "DevPackages": {
-          "$path": "dev-packages.project.json"
-        },
         "RunTests": {
           "$path": "runTests.server.lua"
         }
