--- a/wally.toml
+++ b/wally.toml
@@ -14,10 +14,11 @@ Llama = "freddylist/llama@1.1.1"
 Roact = "roblox/roact@1.4.2"
 RoactRodux = "roblox/roact-rodux@0.3.0"
 RoactHooks = "kampfkarren/roact-hooks@0.3.0"
-RoactSpring = "chriscerie/roact-spring@^0.0"
+RoactSpring = "chriscerie/roact-spring@1.1.1"
+
+# Wally doesn't always properly link dev dependencies, so we have to put it here.
+# https://github.com/UpliftGames/wally/issues/96
+TestEZ = "roblox/testez@0.4.1"
 
 [server-dependencies]
 Cmdr = "evaera/cmdr@1.9.0"
-
-[dev-dependencies]
-TestEZ = "roblox/testez@0.4.1"
