Add snowfall to map list, announcer, many fixes and tweaks

--- a/default.project.json
+++ b/default.project.json
@@ -42,7 +42,20 @@
           }
         },
         "Configuration": {
-          "$className": "Configuration"
+          "$className": "Configuration",
+          "$properties": {
+            "Attributes": {
+              "StartingMapName": {
+                "String": "Arena"
+              },
+              "IsDebug": {
+                "Bool": false
+              },
+              "MockDataStoreOverride": {
+                "String": ""
+              }
+            }
+          }
         }
       },
 
