--- a/foreman.toml
+++ b/foreman.toml
@@ -2,3 +2,4 @@
 wally = { source = "upliftgames/wally", version = "0.3.2" }
 rojo = { source = "rojo-rbx/rojo", version = "7.0.0" }
 remodel = {github = "rojo-rbx/remodel", version = "0.10.0" }
+selene = { source = "Kampfkarren/selene", version = "0.25.0" }
